# magicbus

./: .codecov.yml  .gitignore  .hgtags  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  README.txt  conftest.py  ez_setup.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  towncrier.toml  tox.ini
.github/: FUNDING.yml  config.yml
.github/actions/cache-keys/: action.yml
.github/workflows/: ci-cd.yml  python-tests.yml  reusable-linters.yml  scheduled-runs.yml
docs/: conf.py  index.rst
docs/changelog-fragments.d/: README.rst
magicbus/: LICENSE.txt  __init__.py  _compat.py  base.py  compat.py  process.py  win32.py  wspbus.py
magicbus/plugins/: __init__.py  lifecycle.py  loggers.py  opsys.py  servers.py  signalhandler.py  tasks.py
magicbus/test/: __init__.py  helper.py  test_bus.py  test_opsys.py  test_processbus.py  test_servers.py  test_signals.py  test_states.py  test_tasks.py
processbus/: __init__.py  _compat.py  win32.py  wspbus.py
processbus/plugins/: __init__.py  opsys.py  servers.py  signalhandler.py  tasks.py
processbus/test/: __init__.py  helper.py  test_bus.py  test_states.py
sphinx/: make.bat
sphinx/source/: conf.py
sphinx/source/_static/: cpdocmain.css
sphinx/source/progguide/files/: downloading.rst  uploading.rst
sphinx/util/: convert-trac.py
